--- a/reflections.html
+++ b/reflections.html
@@ -233,9 +233,9 @@
 						<article class="blog-entry animate-box">
 								<div class="blog-wrap">
 									<div class="blog-image">
-										<!-- <a href="blog.html" class="blog-img text-center"
-												style="background-image: url(images/blog-1.jpg);"><span><i
-														class="icon-link"></i></span></a> -->
+										<a href="blog.html" class="blog-img text-center"
+												style="background-image: url(images/seminar.png);"><span><i
+														class="icon-link"></i></span></a>
 									</div>
 									<h2 class="text-center"><a href="blog.html">SoCIT Week Reflections</a>
 									</h2>
@@ -243,6 +243,7 @@
 								<div class="desc">
 										<span class="category"><a><i ></i> REFLECTION # 5</a> <a class="posted-by"><i class="icon-user2"></i> by
 											Rovyyc</a></span>
+									
 									<p class="first-letra">My experience in SoCIT Fest was good because I learned a lot during the seminars, and I
 											commend the different organization for having an informative seminar about IT. The seminar that I’ve
 											been attending are out, Cloud Computing: Microsoft Azure, Data Analytics, etc. One of my favorite
