--- a/reflections.html
+++ b/reflections.html
@@ -112,9 +112,9 @@
 						<article class="blog-entry animate-box">
 							<div class="blog-wrap">
 								<div class="blog-image">
-									<!-- <a href="blog.html" class="blog-img text-center"
-										style="background-image: url(images/blog-1.jpg);"><span><i
-												class="icon-link"></i></span></a> -->
+								 <a class="blog-img text-center"
+										style="background-image: url(https://ak4.picdn.net/shutterstock/videos/26050454/thumb/1.jpg);"><span><i
+												class="icon-link"></i></span></a> 
 								</div>
 								<h2 class="text-center"><a href="blog.html">First Week of USERDES Class</a>
 								</h2>
@@ -143,9 +143,9 @@
 						<article class="blog-entry animate-box">
 							<div class="blog-wrap">
 								<div class="blog-image">
-									<!-- <a href="blog.html" class="blog-img text-center"
-											style="background-image: url(images/blog-1.jpg);"><span><i
-													class="icon-link"></i></span></a> -->
+									<a class="blog-img text-center"
+											style="background-image: url(https://careerfoundry.com/en/blog/uploads/prototyping.png);"><span><i
+													class="icon-link"></i></span></a>
 								</div>
 								<h2 class="text-center"><a href="blog.html">Need Finding and Paper Prototyping</a>
 								</h2>
@@ -171,9 +171,9 @@
 						<article class="blog-entry animate-box">
 							<div class="blog-wrap">
 								<div class="blog-image">
-									<!-- <a href="blog.html" class="blog-img text-center"
-											style="background-image: url(images/blog-1.jpg);"><span><i
-													class="icon-link"></i></span></a> -->
+									<a class="blog-img text-center"
+											style="background-image: url(https://waterflame.in/images/services/lg6.jpg);"><span><i
+													class="icon-link"></i></span></a>
 								</div>
 								<h2 class="text-center"><a href="blog.html">Making First Web Application</a>
 								</h2>
@@ -206,9 +206,9 @@
 						<article class="blog-entry animate-box">
 								<div class="blog-wrap">
 									<div class="blog-image">
-										<!-- <a href="blog.html" class="blog-img text-center"
-												style="background-image: url(images/blog-1.jpg);"><span><i
-														class="icon-link"></i></span></a> -->
+										<a class="blog-img text-center"
+												style="background-image: url(https://miro.medium.com/max/1050/1*hp-yfKsmzsj711iLbM8eEw.jpeg);"><span><i
+														class="icon-link"></i></span></a>
 									</div>
 									<h2 class="text-center"><a href="blog.html">Userinyerface Quiz</a>
 									</h2>
@@ -233,8 +233,8 @@
 						<article class="blog-entry animate-box">
 								<div class="blog-wrap">
 									<div class="blog-image">
-										<a href="blog.html" class="blog-img text-center"
-												style="background-image: url(images/seminar.png);"><span><i
+										<a class="blog-img text-center"
+												style="background-image: url(images/socit.jpg);"><span><i
 														class="icon-link"></i></span></a>
 									</div>
 									<h2 class="text-center"><a href="blog.html">SoCIT Week Reflections</a>
@@ -263,9 +263,9 @@
 							<article class="blog-entry animate-box">
 									<div class="blog-wrap">
 										<div class="blog-image">
-											<!-- <a href="blog.html" class="blog-img text-center"
-													style="background-image: url(images/blog-1.jpg);"><span><i
-															class="icon-link"></i></span></a> -->
+											<a href="blog.html" class="blog-img text-center"
+													style="background-image: url(https://miro.medium.com/max/2100/1*WHoAzsTbRrz4HMTdeSEa8w.png);"><span><i
+															class="icon-link"></i></span></a>
 										</div>
 										<h2 class="text-center"><a href="blog.html">First Half of USERDES</a>
 										</h2>
