--- a/learnings.html
+++ b/learnings.html
@@ -39,6 +39,15 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 
 	<link rel="stylesheet" href="css/style.css">
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!------ Include the above in your HEAD tag ---------->
+
+
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css"
+		integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+	<link rel="stylesheet" href="ripple.min.css">
 
 
 	<!-- Modernizr JS -->
@@ -52,7 +61,7 @@
 
 <body>
 	<nav id="colorlib-main-nav" role="navigation">
-		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
+		<a class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 		<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
 				<ul>
@@ -67,6 +76,37 @@
 		</div>
 	</nav>
 
+	<!-- <nav class="floating-menu">
+		<ul class="main-menu-s">
+			<li>
+				<a href="index.html" class="ripple">
+					<i class="fas fa-home fa-lg"></i>
+				</a>
+			</li>
+			<li>
+				<a href="activities.html" class="ripple">
+					<i class="far fa-user fa-lg"></i>
+				</a>
+			</li>
+			<li>
+				<a href="reflections.html" class="ripple">
+					<i class="far fa-address-card fa-lg"></i>
+				</a>
+			</li>
+			<li>
+				<a href="learnings.html" class="ripple">
+					<i class="fas fa-cogs fa-lg"></i>
+				</a>
+			</li>
+			<li>
+				<a href="projects.html" class="ripple">
+					<i class="fab fa-blogger-b fa-lg"></i>
+				</a>
+			</li>
+		</ul>
+		<div class="menu-bg-s"></div>
+	</nav> -->
+
 	<div id="colorlib-page">
 		<header>
 			<div class="container">
@@ -76,7 +116,7 @@
 							<img src="images/170.png" alt="Logo" style="width:50px;">
 							<a class="colorlib-logo" href="index.html">Rovyyc Banawa</a>
 						</div>
-						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
+						<a class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
 				</div>
 			</div>
@@ -107,195 +147,146 @@
 						<h2>Courses</h2>
 					</div>
 				</div>
-				<div class="row row-padded-bottom">
-					<div class="col-md-6 animate-box text-center">
-						<a class="work-img" style="background-image: url(images/cert1.PNG);">
-							<div class="overlay"></div>
-							<div class="desc">
-								<h3>Learning Java 8</h3>
-								<h4>From LinkedIn Learning</h4>
-								<h5>By: Peggy Fisher - Released on February 26, 2015</h5>
-								<h5>Course Completed: Febuary 28, 2018</h5>
-
-							</div>
-						</a>
-					</div>
-					<div class="col-md-6 animate-box text-center">
-						<a class="work-img" style="background-image: url(images/cert2.PNG);">
-							<div class="overlay"></div>
-							<div class="desc">
-								<h3>Java Essential Training: Syntax and Structure</h3>
-								<h4>From LinkedIn Learning</h4>
-								<h5>By: David Gassner - Released on January 19, 2018</h5>
-								<h5>Course Completed: Febuary 27, 2018</h5>
-
-							</div>
-						</a>
-					</div>
-					<div class="col-md-6 animate-box text-center">
-						<a class="work-img" style="background-image: url(images/cert3.PNG);">
-							<div class="overlay"></div>
-							<div class="desc">
-								<h3>Introduction to Data Structures & Algorithms in Java</h3>
-								<h4>From LinkedIn Learning</h4>
-								<h5>By: Raghavendra Dixit -
-									Released on November 20, 2017</h5>
-								<h5>Course Completed: Febuary 27, 2018</h5>
-
-							</div>
-						</a>
-					</div>
-					<div class="col-md-6 animate-box text-center">
-						<a class="work-img" style="background-image: url(images/cert4.PNG);">
-							<div class="overlay"></div>
-							<div class="desc">
-								<h3>Java Essential Training: Objects and APIs</h3>
-								<h4>From LinkedIn Learning</h4>
-								<h5>By: David Gassner -
-									Released on February 6, 2018
-								</h5>
-								<h5>Course Completed: March 01, 2018</h5>
-
-							</div>
-						</a>
-					</div>
-					<div class="container-fluid">
-						<h1>USER-DESIGN</h1>
-					</div>
-					<div class="col-md-6 animate-box text-center">
-						<a class="work-img" style="background-image: url(images/cert5.PNG);">
-							<div class="overlay"></div>
-							<div class="desc">
-								<h3>Design Thinking: Understanding the Process</h3>
-								<h4>From LinkedIn Learning</h4>
-								<h5>By: Chris Nodder -
-									Released on October 27, 2016
-								</h5>
-								<h5>Course Completed: September 09, 2019</h5>
-
-							</div>
-						</a>
-					</div>
-					<div class="col-md-6 animate-box text-center">
-						<a class="work-img" style="background-image: url(images/cert6.PNG);">
-							<div class="overlay"></div>
-							<div class="desc">
-								<h3>UX Foundations: Multidevice Design</h3>
-								<h4>From LinkedIn Learning</h4>
-								<h5>By: Diane Cronenwett
-									Released on March 30, 2018
-								</h5>
-								<h5>Course Completed: September 09, 2019</h5>
-
-							</div>
-						</a>
-					</div>
-					<div class="col-md-6 animate-box text-center">
-						<a class="work-img" style="background-image: url(images/cert6.PNG);">
-							<div class="overlay"></div>
-							<div class="desc">
-								<h3>User Experience for Web Design</h3>
-								<h4>From LinkedIn Learning</h4>
-								<h5>By: Chris Nodder
-									Released on December 24, 2015</h5>
-								<h5>Course Completed: September 09, 2019</h5>
-
-							</div>
-						</a>
-					</div>
-				</div>
 			</div>
+		
+			<!-- Page Content -->
 			<div class="container">
-				<div class="row">
-					<p class="prev-next">
-						<a href="#" class="previous text-left"><i class="icon-arrow-left4"></i> Previous</a>
-						<a href="#" class="next text-right">Next <i class="icon-arrow-right4"></i></a>
-					</p>
+				<div class="row text-center text-lg-left">
+
+					<div class="col-lg-4 col-md-4 col-6">
+						<h4>Learning Java 8</h4>
+						<h4>Course Completed: Febuary 28, 2018</h4>
+						<a class="d-block mb-4 h-100">
+							<img class="img-fluid img-thumbnail" src="images/cert1.PNG" alt="">
+						</a>
+
+					</div>
+					<div class="col-lg-4 col-md-4 col-6">
+						<h4>Java Essential Training: Syntax & Structure</h4>
+						<h4>Course Completed: Febuary 27, 2018</h4>
+						<a class="d-block mb-4 h-100">
+							<img class="img-fluid img-thumbnail" src="images/cert2.PNG" alt="">
+						</a>
+
+
+					</div>
+					<div class="col-lg-4 col-md-4 col-6">
+						<h5>Introduction to Data Structures & Algorithms in Java</h5>
+						<h4>Course Completed: Febuary 26, 2018</h4>
+						<a class="d-block mb-4 h-100">
+							<img class="img-fluid img-thumbnail" src="images/cert3.PNG" alt="">
+						</a>
+
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-6">
+						<h4>Design Thinking: Understanding the Process</h4>
+						<h4>Course Completed: September 10, 2019</h4>
+						<a class="d-block mb-4 h-100">
+							<img class="img-fluid img-thumbnail" src="images/cert5.PNG" alt="">
+						</a>
+
+					</div>
+					<div class="col-lg-4 col-md-4 col-6">
+						<h4>UX Foundations: Multidevice Design</h4>
+						<h4>Course Completed: September 10, 2019</h4>
+						<a class="d-block mb-4 h-100">
+							<img class="img-fluid img-thumbnail" src="images/cert6.PNG" alt="">
+						</a>
+
+					</div>
+					<div class="col-lg-4 col-md-4 col-6">
+						<h4>User Experience for Web Design</h4>
+						<h4>Course Completed: September 10, 2019</h4>
+						<a class="d-block mb-4 h-100">
+							<img class="img-fluid img-thumbnail" src="images/cert7.PNG" alt="">
+						</a>
+
+					</div>
+
 				</div>
 			</div>
-		</div>
-		<footer>
-			<div id="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-4 col-pb-sm">
-							<div class="row">
-								<div class="col-md-10">
-									<h2>Personal Website</h2>
-									<p>USERDESIGN class project.</p>
-									<div class="row">
+		
+			<hr>
+			<footer>
+				<div id="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-4 col-pb-sm">
+								<div class="row">
+									<div class="col-md-10">
+										<h2>Personal Website</h2>
+										<p>USERDESIGN class project.</p>
+										<div class="row">
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
-							<h2>Newsletter</h2>
-							<div class="subscribe text-center">
-								<div class="form-group">
-									<input type="text" class="form-control text-center"
-										placeholder="Enter Email address">
-									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
+							<div class="col-md-4 col-pb-sm">
+								<h2>Newsletter</h2>
+								<div class="subscribe text-center">
+									<div class="form-group">
+										<input type="text" class="form-control text-center"
+											placeholder="Enter Email address">
+										<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm right-display">
-							<h2>Follow Us</h2>
-							<p class="colorlib-social-icons colorlib-social-icons2">
-								<a href="#"><i class="icon-facebook4"></i></a>
-								<a href="#"><i class="icon-twitter3"></i></a>
-								<a href="#"><i class="icon-googleplus"></i></a>
+							<div class="col-md-4 col-pb-sm right-display">
+								<h2>Follow Us</h2>
+								<p class="colorlib-social-icons colorlib-social-icons2">
+									<a><i class="icon-facebook4"></i></a>
+									<a><i class="icon-twitter3"></i></a>
+									<a><i class="icon-googleplus"></i></a>
 
-							</p>
-							<p>
-								<span class="block">
-									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-									Copyright &copy;<script>
-										document.write(new Date().getFullYear());
-									</script> All rights reserved | This website is made with <i class="icon-heart2"
-										aria-hidden="true"></i> by <a href="https://colorlib.com"
-										target="_blank">Colorlib</a>
-									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br></span>
-							</p>
+								</p>
+								<p>
+									<span class="block">
+										<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+										Copyright &copy;<script>
+											document.write(new Date().getFullYear());
+										</script> All rights reserved | This website is made with <i class="icon-heart2"
+											aria-hidden="true"></i> by <a href="https://colorlib.com"
+											target="_blank">Colorlib</a>
+										<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br></span>
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</footer>
+			</footer>
 
+			<script src="" async defer></script>
+			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+				integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+				crossorigin="anonymous">
+			</script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+				integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+				crossorigin="anonymous">
+			</script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+				integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+				crossorigin="anonymous">
+			</script>
 
+			<!-- jQuery -->
+			<script src="js/jquery.min.js"></script>
+			<!-- jQuery Easing -->
+			<script src="js/jquery.easing.1.3.js"></script>
+			<!-- Bootstrap -->
+			<script src="js/bootstrap.min.js"></script>
+			<!-- Waypoints -->
+			<script src="js/jquery.waypoints.min.js"></script>
+			<!-- Flexslider -->
+			<script src="js/jquery.flexslider-min.js"></script>
+			<!-- Counters -->
+			<script src="js/jquery.countTo.js"></script>
+			<!-- Owl Carousel -->
+			<script src="js/owl.carousel.min.js"></script>
 
-
-
-
-
-		<script src="" async defer></script>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-			integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-		</script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-		</script>
-
-		<!-- jQuery -->
-		<script src="js/jquery.min.js"></script>
-		<!-- jQuery Easing -->
-		<script src="js/jquery.easing.1.3.js"></script>
-		<!-- Bootstrap -->
-		<script src="js/bootstrap.min.js"></script>
-		<!-- Waypoints -->
-		<script src="js/jquery.waypoints.min.js"></script>
-		<!-- Flexslider -->
-		<script src="js/jquery.flexslider-min.js"></script>
-		<!-- Counters -->
-		<script src="js/jquery.countTo.js"></script>
-		<!-- Owl Carousel -->
-		<script src="js/owl.carousel.min.js"></script>
-
-		<!-- Main JS (Do not remove) -->
-		<script src="js/main.js"></script>
+			<!-- Main JS (Do not remove) -->
+			<script src="js/main.js"></script>
 </body>
 
 </html>
