--- a/reflections.html
+++ b/reflections.html
@@ -295,7 +295,7 @@
 						
 
 
-
+<!-- 
 						<div class="row">
 							<div class="col-md-12 text-center">
 								<ul class="pagination">
@@ -307,7 +307,7 @@
 									<li><a href="#">&raquo;</a></li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
